Project /cpp/cppParser.java
// Generated from cpp.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, MultiLineMacro=22, Directive=23, 
		Else=24, Enum=25, Float=26, For=27, If=28, Inline=29, Int=30, Long=31, 
		New=32, Operator=33, Return=34, Short=35, Signed=36, Static=37, Static_assert=38, 
		Static_cast=39, Switch=40, Unsigned=41, Void=42, Wchar=43, Plus=44, Minus=45, 
		Star=46, Div=47, Mod=48, Caret=49, And=50, Or=51, Tilde=52, Not=53, Assign=54, 
		Less=55, Greater=56, MinusAssign=57, StarAssign=58, DivAssign=59, ModAssign=60, 
		XorAssign=61, AndAssign=62, OrAssign=63, LeftShift=64, LeftShiftAssign=65, 
		Equal=66, Identifier=67, Integerliteral=68, Decimalliteral=69, Octalliteral=70, 
		Hexadecimalliteral=71, Binaryliteral=72, Integersuffix=73, Characterliteral=74, 
		Floatingliteral=75, Stringliteral=76, Whitespace=77, Newline=78, Break=79, 
		Continue=80, Char=81, Char16=82, Char32=83, Bool=84, Double=85, Auto=86, 
		Default=87, Delete=88;
	public static final int
		RULE_translationunit = 0, RULE_idexpression = 1, RULE_postfixexpression = 2, 
		RULE_expressionlist = 3, RULE_additiveexpression = 4, RULE_relationalexpression = 5, 
		RULE_assignmentexpression = 6, RULE_statement = 7, RULE_statementseq = 8, 
		RULE_selectionstatement = 9, RULE_condition = 10, RULE_jumpstatement = 11, 
		RULE_declarationseq = 12, RULE_simpledeclaration = 13, RULE_declspecifier = 14, 
		RULE_declspecifierseq = 15, RULE_simpletypespecifier = 16, RULE_originalnamespacename = 17, 
		RULE_attributespecifierseq = 18, RULE_attributespecifier = 19, RULE_initdeclaratorlist = 20, 
		RULE_initdeclarator = 21, RULE_declarator = 22, RULE_ptrdeclarator = 23, 
		RULE_noptrdeclarator = 24, RULE_parametersandqualifiers = 25, RULE_ptroperator = 26, 
		RULE_ptrabstractdeclarator = 27, RULE_noptrabstractdeclarator = 28, RULE_noptrabstractpackdeclarator = 29, 
		RULE_parameterdeclarationclause = 30, RULE_parameterdeclarationlist = 31, 
		RULE_parameterdeclaration = 32, RULE_functiondefinition = 33, RULE_functionbody = 34, 
		RULE_initializer = 35, RULE_braceorequalinitializer = 36, RULE_initializerclause = 37, 
		RULE_initializerlist = 38, RULE_bracedinitlist = 39, RULE_classordecltype = 40, 
		RULE_ctorinitializer = 41, RULE_rightShift = 42, RULE_rightShiftAssign = 43, 
		RULE_theoperator = 44, RULE_literal = 45;
	public static final String[] ruleNames = {
		"translationunit", "idexpression", "postfixexpression", "expressionlist", 
		"additiveexpression", "relationalexpression", "assignmentexpression", 
		"statement", "statementseq", "selectionstatement", "condition", "jumpstatement", 
		"declarationseq", "simpledeclaration", "declspecifier", "declspecifierseq", 
		"simpletypespecifier", "originalnamespacename", "attributespecifierseq", 
		"attributespecifier", "initdeclaratorlist", "initdeclarator", "declarator", 
		"ptrdeclarator", "noptrdeclarator", "parametersandqualifiers", "ptroperator", 
		"ptrabstractdeclarator", "noptrabstractdeclarator", "noptrabstractpackdeclarator", 
		"parameterdeclarationclause", "parameterdeclarationlist", "parameterdeclaration", 
		"functiondefinition", "functionbody", "initializer", "braceorequalinitializer", 
		"initializerclause", "initializerlist", "bracedinitlist", "classordecltype", 
		"ctorinitializer", "rightShift", "rightShiftAssign", "theoperator", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'#include <iostream>'", "'('", "')'", "';'", "'['", "']'", "','", 
		"'&&'", "'...'", "'{'", "'}'", "':'", "'+='", "'!='", "'<='", "'>='", 
		"'||'", "'++'", "'--'", "'->*'", "'->'", null, null, "'else'", "'enum '", 
		"'float '", "'for '", "'if '", "'inline '", "'int '", "'long '", "'new '", 
		"'operator '", "'return '", "'short '", "'signed '", "'static '", "'static_assert '", 
		"'static_cast '", "'switch'", "'unsigned '", "'void'", "'wchar_t'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'^'", "'&'", "'|'", "'~'", "'!'", "'='", 
		"'<'", "'>'", "'-='", "'*='", "'/='", "'%='", "'^='", "'&='", "'|='", 
		"'<<'", "'<<='", "'=='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "MultiLineMacro", 
		"Directive", "Else", "Enum", "Float", "For", "If", "Inline", "Int", "Long", 
		"New", "Operator", "Return", "Short", "Signed", "Static", "Static_assert", 
		"Static_cast", "Switch", "Unsigned", "Void", "Wchar", "Plus", "Minus", 
		"Star", "Div", "Mod", "Caret", "And", "Or", "Tilde", "Not", "Assign", 
		"Less", "Greater", "MinusAssign", "StarAssign", "DivAssign", "ModAssign", 
		"XorAssign", "AndAssign", "OrAssign", "LeftShift", "LeftShiftAssign", 
		"Equal", "Identifier", "Integerliteral", "Decimalliteral", "Octalliteral", 
		"Hexadecimalliteral", "Binaryliteral", "Integersuffix", "Characterliteral", 
		"Floatingliteral", "Stringliteral", "Whitespace", "Newline", "Break", 
		"Continue", "Char", "Char16", "Char32", "Bool", "Double", "Auto", "Default", 
		"Delete"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cpp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TranslationunitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(cppParser.EOF, 0); }
		public DeclarationseqContext declarationseq() {
			return getRuleContext(DeclarationseqContext.class,0);
		}
		public TranslationunitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationunit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).enterTranslationunit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).exitTranslationunit(this);
		}
	}

	public final TranslationunitContext translationunit() throws RecognitionException {
		TranslationunitContext _localctx = new TranslationunitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationunit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__0);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__7) | (1L << Float) | (1L << Int) | (1L << Long) | (1L << Short) | (1L << Signed) | (1L << Unsigned) | (1L << Void) | (1L << Wchar) | (1L << Star) | (1L << And))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (Identifier - 67)) | (1L << (Integerliteral - 67)) | (1L << (Characterliteral - 67)) | (1L << (Floatingliteral - 67)) | (1L << (Stringliteral - 67)) | (1L << (Char - 67)) | (1L << (Char16 - 67)) | (1L << (Char32 - 67)) | (1L << (Bool - 67)) | (1L << (Double - 67)) | (1L << (Auto - 67)))) != 0)) {
				{
				setState(93);
				declarationseq(0);
				}
			}

			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdexpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(cppParser.Identifier, 0); }
		public IdexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).enterIdexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).exitIdexpression(this);
		}
	}

	public final IdexpressionContext idexpression() throws RecognitionException {
		IdexpressionContext _localctx = new IdexpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_idexpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostfixexpressionContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public IdexpressionContext idexpression() {
			return getRuleContext(IdexpressionContext.class,0);
		}
		public SimpletypespecifierContext simpletypespecifier() {
			return getRuleContext(SimpletypespecifierContext.class,0);
		}
		public ExpressionlistContext expressionlist() {
			return getRuleContext(ExpressionlistContext.class,0);
		}
		public PostfixexpressionContext postfixexpression() {
			return getRuleContext(PostfixexpressionContext.class,0);
		}
		public PostfixexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).enterPostfixexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).exitPostfixexpression(this);
		}
	}

	public final PostfixexpressionContext postfixexpression() throws RecognitionException {
		return postfixexpression(0);
	}

	private PostfixexpressionContext postfixexpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PostfixexpressionContext _localctx = new PostfixexpressionContext(_ctx, _parentState);
		PostfixexpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_postfixexpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(101);
				literal();
				}
				break;
			case 2:
				{
				setState(102);
				idexpression();
				}
				break;
			case 3:
				{
				setState(103);
				simpletypespecifier();
				setState(104);
				match(T__1);
				setState(105);
				expressionlist();
				setState(106);
				match(T__2);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PostfixexpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_postfixexpression);
					setState(110);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(111);
					match(T__1);
					setState(114);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case Identifier:
						{
						setState(112);
						idexpression();
						}
						break;
					case Integerliteral:
					case Characterliteral:
					case Floatingliteral:
					case Stringliteral:
						{
						setState(113);
						literal();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(116);
					match(T__2);
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionlistContext extends ParserRuleContext {
		public AdditiveexpressionContext additiveexpression() {
			return getRuleContext(AdditiveexpressionContext.class,0);
		}
		public ExpressionlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).enterExpressionlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).exitExpressionlist(this);
		}
	}

	public final ExpressionlistContext expressionlist() throws RecognitionException {
		ExpressionlistContext _localctx = new ExpressionlistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expressionlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			additiveexpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditiveexpressionContext extends ParserRuleContext {
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<IdexpressionContext> idexpression() {
			return getRuleContexts(IdexpressionContext.class);
		}
		public IdexpressionContext idexpression(int i) {
			return getRuleContext(IdexpressionContext.class,i);
		}
		public AdditiveexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additiveexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).enterAdditiveexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).exitAdditiveexpression(this);
		}
	}

	public final AdditiveexpressionContext additiveexpression() throws RecognitionException {
		AdditiveexpressionContext _localctx = new AdditiveexpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_additiveexpression);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				literal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				idexpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(127);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(128);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(131);
				match(Star);
				setState(134);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(132);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(133);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(138);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(136);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(137);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(140);
				match(Div);
				setState(143);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(141);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(142);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(145);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(146);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(149);
				match(Plus);
				setState(152);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(150);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(151);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(156);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(154);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(155);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(158);
				match(Minus);
				setState(161);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(159);
					idexpression();
					}
					break;
				case Integerliteral:
				case Characterliteral:
				case Floatingliteral:
				case Stringliteral:
					{
					setState(160);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationalexpressionContext extends ParserRuleContext {
		public IdexpressionContext idexpression() {
			return getRuleContext(IdexpressionContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public RelationalexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationalexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).enterRelationalexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cppListener ) ((cppListener)listener).exitRelationalexpression(this);
		}
	}

	public final RelationalexpressionContext relationalexpression() throws RecognitionException {
		RelationalexpressionContext _localctx = new RelationalexpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_relationalexpression);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				idexpression();
				setState(166);
				match(Less);
				setState(167);
				literal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				idexpression();
				setState(170);
				match(Greater);
				setState(171);
				literal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
